rename project to flow; add formatter; fix frame popping; refactor func; add error for empty flow/program; add debugging functions;

--- a/flow.cabal
+++ b/flow.cabal
@@ -4,14 +4,14 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 
-name:           monadic-parser
+name:           flow
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/monadic-parser#readme>
-homepage:       https://github.com/githubuser/monadic-parser#readme
-bug-reports:    https://github.com/githubuser/monadic-parser/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
+description:    Please see the README on GitHub at <https://github.com/DerivedMate/flow/blob/main/README.md>
+homepage:       https://github.com/derivedmate/flow#readme
+bug-reports:    https://github.com/derivedmate/flow/issues
+author:         Tomasz Surowiec
+maintainer:     tosurowiec@gmail.com
+copyright:      2021 Tomasz Surowiec
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/monadic-parser
+  location: https://github.com/derivedmate/flow
 
 library
   exposed-modules:
@@ -30,7 +30,7 @@ library
       Lexer
       Syntax
   other-modules:
-      Paths_monadic_parser
+      Paths_flow
   hs-source-dirs:
       src
   build-depends:
@@ -41,13 +41,13 @@ library
 executable monadic-parser-exe
   main-is: Main.hs
   other-modules:
-      Paths_monadic_parser
+      Paths_flow
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , monadic-parser
+    , flow
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
 
@@ -56,13 +56,13 @@ test-suite monadic-parser-test
   main-is: Spec.hs
   other-modules:
       SSyntax
-      Paths_monadic_parser
+      Paths_flow
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
     , base >=4.7 && <5
-    , monadic-parser
+    , flow
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
