--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
-name:                monadic-parser
+name:                flow
 version:             0.1.0.0
-github:              "githubuser/monadic-parser"
+github:              "derivedmate/flow"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2021 Author name here"
+author:              "Tomasz Surowiec"
+maintainer:          "tosurowiec@gmail.com"
+copyright:           "2021 Tomasz Surowiec"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/monadic-parser#readme>
+description:         Please see the README on GitHub at <https://github.com/DerivedMate/flow/blob/main/README.md>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -35,7 +35,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - monadic-parser
+    - flow
 
 tests:
   monadic-parser-test:
@@ -46,5 +46,5 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - monadic-parser
+    - flow
     - HUnit
