--- a/flow.cabal
+++ b/flow.cabal
@@ -28,6 +28,7 @@ library
       Eval
       Helper.AssocMap
       Lexer
+      PreProcessor
       Syntax
   other-modules:
       Paths_flow
@@ -35,6 +36,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , directory >=1.3.6.0
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
 
@@ -47,6 +49,7 @@ executable monadic-parser-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , directory >=1.3.6.0
     , flow
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
@@ -63,6 +66,7 @@ test-suite monadic-parser-test
   build-depends:
       HUnit
     , base >=4.7 && <5
+    , directory >=1.3.6.0
     , flow
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
