--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/Deri
 dependencies:
 - base >= 4.7 && < 5
 - pretty-simple >= 4.0.0.0
+- directory >= 1.3.6.0
 
 library:
   source-dirs: src
