--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,8 @@ packages:
 # extra-deps: [
 #   
 # ]
+extra-deps:
+- data-tree-print-0.1.0.2@sha256:d845e99f322df70e0c06d6743bf80336f5918d5423498528beb0593a2afc1703,1620
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
