--- a/flow.cabal
+++ b/flow.cabal
@@ -48,7 +48,7 @@ library
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
 
-executable monadic-parser-exe
+executable Flow
   main-is: Main.hs
   other-modules:
       Paths_flow
@@ -62,7 +62,7 @@ executable monadic-parser-exe
     , pretty-simple >=4.0.0.0
   default-language: Haskell2010
 
-test-suite monadic-parser-test
+test-suite flow-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
