--- a/package.yaml
+++ b/package.yaml
@@ -28,7 +28,7 @@ library:
   source-dirs: src
 
 executables:
-  monadic-parser-exe:
+  Flow:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -39,7 +39,7 @@ executables:
     - flow
 
 tests:
-  monadic-parser-test:
+  flow-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
