add static expreg; add emptyState; add Type to rtOfExp; add expOfRt; separate capture from step; start notes on nullable expred; add Reducer;

--- a/flow.cabal
+++ b/flow.cabal
@@ -37,6 +37,9 @@ library
       Helper.AssocMap
       Lexer
       PreProcessor
+      Reduction.Nullable
+      Reduction.Reducer
+      Reduction.Static
       Syntax
   other-modules:
       Paths_flow
