--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,9 @@
             "ghciPrompt": "H>>= ",
             "ghciInitialPrompt": "Prelude>",
             "ghciCmd": "stack ghci --test --no-load --no-build --main-is TARGET",
-            "ghciEnv": {},
+            "ghciEnv": {
+                "FENV": "dev"
+            },
             "logFile": "${workspaceFolder}/.vscode/phoityne.log",
             "logLevel": "WARNING",
             "forceInspect": false
