add modules; add either error to parseFile; remove legacy nullable test function; add module test; add cyclic dep. test;

--- a/flow.cabal
+++ b/flow.cabal
@@ -36,7 +36,10 @@ library
       Eval.Step.Literal
       Helper.AssocMap
       Helper.Error
+      Helper.String
       Lexer
+      Module.Graph
+      Module.Module
       PreProcessor
       Reduction.Nullable
       Reduction.Reducer
