--- a/flow.cabal
+++ b/flow.cabal
@@ -61,7 +61,7 @@ executable Flow
       Paths_flow
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -static
   build-depends:
       base >=4.7 && <5
     , directory >=1.3.6.0
