add dynamic capture; add dc syntax tests; add MaybeT;

--- a/flow.cabal
+++ b/flow.cabal
@@ -37,6 +37,7 @@ library
       Helper.AssocMap
       Helper.Debug
       Helper.Error
+      Helper.MaybeT
       Helper.String
       Lexer
       Module.Graph
